--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.projectlombok:lombok'
+	
+	compileOnly 'org.projectlombok:lombok:1.18.8'
+	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
 	compile("org.springframework.boot:spring-boot-starter-jdbc:2.0.1.RELEASE")
 	compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1")
