--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	
-	compileOnly 'org.projectlombok:lombok:1.18.8'
+	compile 'org.projectlombok:lombok:1.18.8'
 	annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
 	compile("org.springframework.boot:spring-boot-starter-jdbc:2.0.1.RELEASE")
