--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,15 @@ group = 'com.kakaosecurities'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+jar{
+	manifest{
+		attributes 'Main-Class' : 'WorkApplication'
+	}
+	from {
+		configurations.compile.collect{it.isDirectory()? it: zipTree(it)}
+	}
+}
+
 repositories {
 	mavenCentral()
 }
