--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ jar{
 	manifest{
 		attributes 'Main-Class' : 'WorkApplication'
 	}
+	dependsOn configurations.runtime
 	from {
 		configurations.compile.collect{it.isDirectory()? it: zipTree(it)}
 	}
